# OOP

./: CMakeLists.txt  README.md
laba01/: CMakeLists.txt  README.md
laba01/src/: main.cpp  remove_vowels.cpp  remove_vowels.h  tests.cpp
laba02/: CMakeLists.txt  README.md
laba02/include/: five_array.h
laba02/src/: five_array.cpp  main.cpp  tests.cpp
laba03/: CMakeLists.txt  README.md
laba03/include/: FigureValidator.h  HexagonValidator.h  IFigureValidator.h  OctagonValidator.h  PentagonValidator.h  figure.h  hexagon.h  octagon.h  pentagon.h  point.h
laba03/src/: FigureValidator.cpp  HexagonValidator.cpp  IFigureValidator.cpp  OctagonValidator.cpp  PentagonValidator.cpp  figure.cpp  hexagon.cpp  main.cpp  octagon.cpp  pentagon.cpp  point.cpp  tests.cpp
laba04/: CMakeLists.txt  README.md
laba04/include/: Array.h  Concept.h  Figure.h  FigureValidator.h  Hexagon.h  HexagonValidator.h  IFigureValidator.h  Octagon.h  OctagonValidator.h  Pentagon.h  PentagonValidator.h  Point.h
laba04/src/: Array.cpp  Figure.cpp  FigureValidator.cpp  Hexagon.cpp  HexagonValidator.cpp  IFigureValidator.cpp  Octagon.cpp  OctagonValidator.cpp  Pentagon.cpp  PentagonValidator.cpp  Point.cpp  main.cpp  tests.cpp
laba05/: CMakeLists.txt  README.md
laba05/include/: DequeAllocator.h  DynamicArray.h
laba05/src/: main.cpp  tests.cpp
laba06/: CMakeLists.txt  README.md
laba06/include/battle/: BattleManager.h
laba06/include/characters/: Bear.h  Elf.h  NPC.h  NPCFactory.h  Rogue.h
laba06/include/data/: DataHandler.h
laba06/include/observers/: ConsoleObserver.h
laba06/include/visitor/: Visitor.h
laba06/src/: main.cpp  tests.cpp
laba06/src/characters/: Bear.cpp  Elf.cpp  Rogue.cpp
laba07/: CMakeLists.txt  README.md
laba07/include/battle/: BattleManager.h
laba07/include/characters/: Bear.h  Elf.h  NPC.h  Rogue.h
laba07/include/observers/: FileObserver.h  Observer.h
laba07/include/visitor/: BattleVisitor.h
laba07/src/: main.cpp  tests.cpp
laba07/src/characters/: Bear.cpp  Elf.cpp  Rogue.cpp
